tests/error_display/hll_diagnostics_post_elab.err.expected
error: at 44:11: [INIT-RefObligationUnfulfilled] In function 'defer_ref_obligation': reference 'r' has unfulfilled obligation: pointee is initialized, but must be consumed before the reference expires
    |
 44 |     defer r.* = Box { val: 5 };
    |           ^^^^^^^^^^^^^^^^^^^^
  = note: reference declared here
    |
 42 | fn defer_ref_obligation(r: &drop Box) {
    |                         ^^^^^^^^^^^^
error: at 22:5: [LT-LoanConflict] In function 'loan_conflict': cannot write to 'x': already borrowed by 'r'
    |
 22 |     x = 20;
    |     ^^^^^^
  = note: borrow of 'x' occurs here
    |
 21 |     let r = &mut x;
    |             ^^^^^^
  hint: the borrow of 'r' is active until its last use or explicit unborrow.
error: at 34:5: [LT-LoanConflict] In function 'defer_loan_conflict': cannot write to 'x': already borrowed by 'r'
    |
 34 |     x = 2;
    |     ^^^^^
  = note: borrow of 'x' occurs here
    |
 32 |     let r = &x;
    |             ^^
  hint: the borrow of 'r' is active until its last use or explicit unborrow.
