tests/error_display/hll_diagnostics_post_elab.si
# Rendered output of post-elaboration HLL diagnostics: errors that fire
# only after the NLL lifetime elaboration and drop elaboration passes
# have run. All functions in this file must be free of pre-elaboration
# errors, or the shortcut suppresses these checks.
#
# | fn                   | DiagCode                         |
# |----------------------|----------------------------------|
# | loan_conflict        | LT-LoanConflict                  |
# | defer_loan_conflict  | LT-LoanConflict (via defer)      |
# | defer_ref_obligation | INIT-RefObligationUnfulfilled    |

struct Box: Drop + Move { val: i64 }

# ---------- LT-LoanConflict: write while a mutable borrow is live ----------

# Borrowing `x` as `&mut` and then writing to `x` while the borrow is
# still live (kept alive by the read through `r` on the next line)
# triggers a loan conflict.
fn loan_conflict() {
    let mut x: i64 = 10;
    let r = &mut x;
    x = 20;
    let y = r.*;
}

# ---------- LT-LoanConflict: write while a deferred read keeps borrow live ----------

# The defer block reads through `r`, so the borrow on `x` stays live
# until the deferred read executes; writing `x = 2` in between conflicts.
fn defer_loan_conflict() {
    let mut x = 1;
    let r = &x;
    defer { let y = r.*; };
    x = 2;
}

# ---------- INIT-RefObligationUnfulfilled: &drop ref not fully consumed ----------

# A `&drop Box` parameter requires the caller to consume the referent before
# the reference expires. Moving the value out and then re-assigning via
# defer leaves the obligation unfulfilled at the point the defer executes.
fn defer_ref_obligation(r: &drop Box) {
    let x = r.*;
    defer r.* = Box { val: 5 };
}
